--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div id="diagnostico_sintomas_do_autismo_banners">
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/1.jpg" width="300px" height="250px">
                         <p class="corpo">Comportamentos repetitivos</p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
                             <p class="corpo">Repetir movimentos corporais, insistência em seguir rotinas e padrões rígidos de comportamento e interesses limitados. 
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo2.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/2.jpg" width="300px" height="250px">
                         <p class="corpo">Dificuldades na interação social</p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
                             <p class="corpo">
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo2.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/3.jpg" width="300px" height="250px">
                         <p class="corpo">Dificuldades na comunicação 
                         </p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
@@ -139,7 +139,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo2.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/4.jpg" width="300px" height="250px">
                         <p class="corpo">Comportamentos impulsivos ou agressivos</p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
                             <p class="corpo">
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo2.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/5.png" width="300px" height="250px">
                         <p class="corpo">Sensibilidade sensorial
                         </p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_diagnostico/autismo2.jpeg" width="300px" height="250px">
+                        <img src="img_sintomas/6.jpg" width="300px" height="250px">
                         <p class="corpo">Dificuldades em compreender 
                         </p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
