--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <link rel="icon" href="img/icone2.png">
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather" />
         <link rel="stylesheet" href="style.css">
+        <title>Inclusão Social</title>
     </head>
     <body>
         <div id="conteudo">
