--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <hr class="menu_divisor" style="color:white" width="100%">
                 <li><a class="nav_item" id="institucional" href="#pesquisa_desenvolvimento">Pesquisa e desenvolvimento</a></li>
                 <hr class="menu_divisor" style="color:white" width="100%">
-                <li><a class="nav_item" id="institucional">Campanha</a></li>
+                <li><a class="nav_item" id="institucional" href="#campanha">Campanha</a></li>
             </ul>
             <button id="hideMenu" type="button" value="Ocultar Menu"><img src="img/fechar_menu.png" width="30px" height="30px" style="justify-content:flex-end; align-items:flex-end;"></button>
         </nav>
@@ -228,7 +228,7 @@
                         </div>
                         <hr style="width:100%;">
                         <div class="mitos_texto" id="text2">
-                            <p class="corpo">Pessoas com TEA têm pontos fortes, talentos e habilidades que as tornam capazes de realizar inúmeros tipos de trabalho.</p>
+                            <p class="corpo">Embora a interação social seja prejudicada no TEA, isso não significa que não seja possível se relacionar no espectro. Muitas pessoas com autismo têm relacionamentos satisfatórios com família, amigos, cônjuges e filhos.</p>
                         </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                         </div>
                         <hr style="width:100%;">
                         <div class="mitos_texto" id="text3">
-                            <p class="corpo">Pessoas com TEA têm pontos fortes, talentos e habilidades que as tornam capazes de realizar inúmeros tipos de trabalho.</p>
+                            <p class="corpo">Embora não haja uma única causa conhecida de TEA, não há evidências que apoiem ​​a ligação entre vacinas e TEA.</p>
                         </div>
                     </div>
                     <img src="img_mitos/3.jpg" width="500px" height="400">
