--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <!--HOME PAGE-->
         <section id="home">
             <h1 class="titulo1" style="font-family:'Merriweather'; font-size: 100px; color: white;">Inclusão social</h1>
-            <h2 class="titulo2" style="font-family:'Merriweather'; font-size: 40px; color:white;">Não se cura, se conpreende</h2>
+            <h2 class="titulo2" style="font-family:'Merriweather'; font-size: 40px; color:white;">Autismo não se cura, se compreende
+            </h2>
         </section>
 
 
@@ -141,7 +142,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_sintomas/4.jpg" width="300px" height="250px">
+                        <img src="img_sintomas/5.png" width="300px" height="250px">
                         <p class="corpo">Comportamentos impulsivos ou agressivos</p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
                             <p class="corpo">
@@ -151,7 +152,7 @@
                     </div>
 
                     <div class="diagnostico_sintomas_do_autismo_banner_unit">
-                        <img src="img_sintomas/5.png" width="300px" height="250px">
+                        <img src="img_sintomas/4.jpg" width="300px" height="250px">
                         <p class="corpo">Sensibilidade sensorial
                         </p>
                         <div class="diagnostico_sintomas_do_autismo_banner_info">
